--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 			<div class="wrapper style3">
 				<article id="experiences">
 					<header>
-						<h2>Some stuff I do.</h2>
+						<h2>Recent past and present...</h2>
 						<p></p>
 					</header>
 					<div class="container">
@@ -192,7 +192,7 @@
                         </div>
                         
                         <div class="4u">
-                          <section class="box style1">
+                          <section class="box style1" style="padding-bottom:220px">
                             <span class="icon featured fa-question"></span>
                             <h3>??</h3>
                             <h4>"???"</h4>
