almost definitely index

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                   <a href="#map" class="scrolly"><i class="fa fa-map-marker fa-2x"></i></a> Quartucciu (Cagliari) - Sardinia
                                 </div>
                                 <div class="6u">
-                                  <i class="fa fa-at fa-2x"></i> 
+                                  <a href="#contact" class="scrolly"><i class="fa fa-at fa-2x"></i></a>
                                   igor.martis@live.com  
                                 </div>
                               </div>
@@ -57,17 +57,17 @@
                                   mammuthones
                                 </div>
                                 <div class="6u">
-                                  <i class="fa fa-wordpress fa-2x"></i>
+                                  <a href="www.sardinialab.it"><i class="fa fa-wordpress fa-2x"></i></a>
                                   <a href="www.sardinialab.it">sardinialab.it</a>
                                 </div>
                               </div>
                           <div class="row">
                                 <div class="6u">
-                                  <i class="fa fa-github fa-2x"></i>
+                                  <a href="https://github.com/mammuthone"><i class="fa fa-github fa-2x"></i></a>
                                   <a href="https://github.com/mammuthone">mammuthone repo</a>
                                 </div>
                                 <div class="6u">
-                                  <i class="fa fa-facebook-square fa-2x"></i> <a href="https://www.facebook.com/martisigor">Igor Martis</a>
+                                  <a href="https://www.facebook.com/martisigor"><i class="fa fa-facebook-square fa-2x"></i> Igor Martis</a>
                                 </div>
                               
                               </div>
@@ -293,15 +293,8 @@
 							<div class="4u">
 								<article class="box style">
 									<a href="#" class="image featured"><img src="images/pic02.svg" alt="" /></a>
-									<h3><a href="#">Veroeros primis</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
-								</article>
-							</div>
-							<div class="4u">
-								<article class="box style4">
-									<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-									<h3><a href="#">Lorem ipsum</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
+									<h3><a href="#"></a></h3>
+									<p></p>
 								</article>
 							</div>
 						</div>
