--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
 		<script src="js/jquery.scrolly.min.js"></script>
 		<script src="js/skel.min.js"></script>
 		<script src="js/init.js"></script>
+		<script src="js/sweet-alert.min.js"></script>
 		<noscript>
+			<link rel="stylesheet" type="text/css" href="css/sweet-alert.css" />
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-desktop.css" />
 		</noscript>
+		
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
 	</head>
 	<body>
-
 		<!-- Nav -->
 			<nav id="nav">
 				<ul class="container">
@@ -30,7 +32,9 @@
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
-
+		<script>
+		swal("Ciao");
+		</script>
 		<!-- Home -->
 			<div class="wrapper style1 first">
 				<article class="container" id="top">
@@ -98,16 +102,21 @@
 							
 							<div class="4u">
 								<section class="box style1" style="padding-bottom:220px">
-									<span class="icon featured fa-question"></span>
-									<h3>??</h3>
-									<h4>"???"</h4>
+									<span class="icon featured fa fa-windows"></span>
+									<h3>Analyst - Programmer</h3>
+									<h4>"Avanade Italy"</h4>
 										<div class="row">
 											<div class="1u"><i class="fa fa-map-marker fa-1x"></i></div>
-											<div class="3u">????</div>
+											<div class="3u">Cagliari</div>
 											<div class="1u"><i class="fa fa-calendar fa-1x"></i></div>
-											<div class="6u">?????</div>
+											<div class="6u">Feb '15 - Attualmente</div>
 									</div>
-									<p>??????</p>
+									<p>Microsoft Dynamics CRM Developer. Customization
+									and maintenance of customers CRM solutions.
+									C# programmer.
+									Basic Azure knowledge.
+									Powershell scripting.
+									</p>
 
 								</section>
 							</div>
