changed avatar pic

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<article class="container" id="top">
 					<div class="row">
 						<div class="4u">
-							<span class="image fit"><img src="images/pic00.jpg" alt="" class="blur"/></span>
+							<span class="image fit"><img src="images/me.jpg" alt="" class="blur"/></span>
 						</div>
 						<div class="8u">
 							<header>
