--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/jquery.scrolly.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/init.js"></script>
-		<script src="js/sweet-alert.min.js"></script>
+		<script async src="js/jquery.min.js"></script>
+		<script async src="js/jquery.scrolly.min.js"></script>
+		<script async src="js/skel.min.js"></script>
+		<script async src="js/init.js"></script>
+		<script async src="js/sweet-alert.min.js"></script>
 		<noscript>
 			<link rel="stylesheet" type="text/css" href="css/sweet-alert.css" />
 			<link rel="stylesheet" href="css/skel.css" />
